--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,569 +1,132 @@
-/* ===================== Main ===================== */
-.main {
-  position: absolute;
-  width: calc(100% - 300px);
-  left: 300px;
-  min-height: 100vh;
-  background: var(--white);
-  transition: 0.5s;
-}
-.main.active {
-  width: calc(100% - 80px);
-  left: 80px;
-}
-/* ======================= Cards ====================== */
-.cardBox {
-  position: relative;
-  width: 100%;
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 30px;
-}
 
-.cardBox .card {
-  position: relative;
-  background: var(--white);
-  padding: 30px;
-  border-radius: 20px;
+.content{
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  cursor: pointer;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  padding: 20px;
+  gap: 25px;
 }
 
-.cardBox .card .numbers {
-  position: relative;
+.cardzBox{
+  width: 100%;
+  display: flex;
+  gap: 20px;
+}
+.cardz{
+  width: 100%;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.20);
+  padding: 20px;
+  display: flex;
+  gap: 50px;
+}
+
+.numbers{
+  font-size: 40px;
   font-weight: 500;
-  font-size: 2.5rem;
   color: var(--blue);
 }
+.cardName{
+  font-size: 20px;
+  font-weight: 500;
+  color:#989898;
+}
+.iconBx ion-icon{
 
-.cardBox .card .cardName {
-  color: var(--black2);
-  font-size: 1.1rem;
-  margin-top: 5px;
+  font-size: 40px;
+  color:aliceblue
 }
 
-.cardBox .card .iconBx {
-  font-size: 3.5rem;
-  color: var(--black2);
-}
-
-.cardBox .card:hover {
-  background: var(--blue);
-}
-.cardBox .card:hover .numbers,
-.cardBox .card:hover .cardName,
-.cardBox .card:hover .iconBx {
-  color: var(--white);
-}
-
-/* ================== Order Details List ============== */
-.details {
-  position: relative;
+.photo{
   width: 100%;
+  height: 367px;
+  background: #a44d4d;
   padding: 20px;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-gap: 30px;
-  /* margin-top: 10px; */
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
 }
 
-.details .recentOrders {
-  position: relative;
-  display: grid;
-  min-height: 500px;
-  background: var(--white);
-  padding: 20px;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-  border-radius: 20px;
-}
-
-.details .cardHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-.cardHeader h2 {
-  font-weight: 600;
-  color: var(--blue);
-}
-.cardHeader .btn {
-  position: relative;
-  padding: 10px 10px;
-  background: var(--blue);
-  text-decoration: none;
-  color: var(--white);
-  border-radius: 6px;
-}
-.fbtn{
-  position: relative;
-  padding:15px;
-  background: var(--blue);
-  text-decoration: none;
-  color: var(--white);
-  border-radius: 6px;
-  border: none;
-  height: 45px;
-  width: 300px;
-  font-size: large;
-  margin: 5px 30px;
-}
-
-.formbuto{
-  display: flex;
-  justify-content: center;
-  align-self: center;
-}
-
-.details table {
+.table{
   width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-}
-.details table thead td {
-  font-weight: 600;
-}
-.details .recentOrders table tr {
-  color: var(--black1);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-.details .recentOrders table tr:last-child {
-  border-bottom: none;
-}
-.details .recentOrders table tbody tr:hover {
-  background: var(--blue);
-  color: var(--white);
-}
-.details .recentOrders table tr td {
-  padding: 10px;
-}
-.details .recentOrders table tr td:last-child {
-  text-align: end;
-}
-.details .recentOrders table tr td:nth-child(2) {
-  text-align: end;
-}
-.details .recentOrders table tr td:nth-child(3) {
-  text-align: center;
-}
-.status.delivered {
-  padding: 2px 4px;
-  background: #8de02c;
-  color: var(--white);
-  border-radius: 4px;
-  font-size: 14px;
-  font-weight: 500;
-}
-.status.pending {
-  padding: 2px 4px;
-  background: #e9b10a;
-  color: var(--white);
-  border-radius: 4px;
-  font-size: 14px;
-  font-weight: 500;
-}
-.status.return {
-  padding: 2px 4px;
-  background: #f00;
-  color: var(--white);
-  border-radius: 4px;
-  font-size: 14px;
-  font-weight: 500;
-}
-.status.inProgress {
-  padding: 2px 4px;
-  background: #1795ce;
-  color: var(--white);
-  border-radius: 4px;
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.recentCustomers {
-  position: relative;
-  display: grid;
-  min-height: 500px;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   padding: 20px;
-  background: var(--white);
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-  border-radius: 20px;
-}
-.recentCustomers .imgBx {
-  position: relative;
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
-  overflow: hidden;
-}
-.recentCustomers .imgBx img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.recentCustomers table tr td {
-  padding: 12px 10px;
-}
-.recentCustomers table tr td h4 {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.2rem;
-}
-.recentCustomers table tr td h4 span {
-  font-size: 14px;
-  color: var(--black2);
-}
-.recentCustomers table tr:hover {
-  background: var(--blue);
-  color: var(--white);
-}
-.recentCustomers table tr:hover td h4 span {
-  color: var(--white);
-}
-
-/* ====================== Responsive Design ========================== */
-@media (max-width: 991px) {
-  .navigation {
-    left: -300px;
-  }
-  .navigation.active {
-    width: 300px;
-    left: 0;
-  }
-  .main {
-    width: 100%;
-    left: 0;
-  }
-  .main.active {
-    left: 300px;
-  }
-  .cardBox {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 768px) {
-  .details {
-    grid-template-columns: 1fr;
-  }
-  .recentOrders {
-    overflow-x: auto;
-  }
-  .status.inProgress {
-    white-space: nowrap;
-  }
-}
-
-@media (max-width: 480px) {
-  .cardBox {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .cardHeader h2 {
-    font-size: 20px;
-  }
-  .user {
-    min-width: 40px;
-  }
-  .navigation {
-    width: 100%;
-    left: -100%;
-    z-index: 1000;
-  }
-  .navigation.active {
-    width: 100%;
-    left: 0;
-  }
-  .toggle {
-    z-index: 10001;
-  }
-  .main.active .toggle {
-    color: #fff;
-    position: fixed;
-    right: 0;
-    left: initial;
-  }
-}
-
-    * {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-
-    .form-container {
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 50%;
-        height:80%;
-        overflow-y: auto;
-        padding: 3%;
-    }
-
-    .formdet{
-        display: grid;
-        grid-template-columns: 1fr 4fr;
-        width: 100%;
-        align-items: center;
-    }
-
-    .formdet input,textarea{
-        height: 50px;
-        border-radius: 12.5px;
-        border: none;
-        background-color: aliceblue;
-        box-shadow: 0 0 1.5px ;
-        outline: none;
-        padding:10px;
-        font-size:15px;
-    }
-    .formdet textarea{
-        width:100%;
-    }
-
-
-    .formdet label{
-        font-weight: 600;
-        font-size: larger;
-    }
-    .overlay, .overlayTask {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        /* Semi-transparent black overlay */
-        display: none;
-        justify-content: center;
-        align-items: center;
-        overflow-y:auto;
-    }
-  
-div.photo{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 20px;
-      min-width: 400px;
-      min-height: 300px ;
-      background-color: #aba1a1;
-    }
-
-    .overlayTask{
-
-.container {
-  max-width: 600px;
-  margin: auto;
-  padding: 20px;
-  background-color: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 80%;
-}
-
-
-h1 {
-  text-align: center;
-  color: #333;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
-form {
-  background-color: #f0f0f0;
+.tabTable{
+  width: 100%;
+  text-align: left;
+}
+
+.tasksList{
+  width: 100%;
+  height: 70%;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   padding: 20px;
-  border-radius: 5px;
+  margin: 0 0 10px 20px;
+
+
+  min-height: 100px;
+  min-width: 100px;
+
 }
 
-label {
-  display: block;
-  margin-bottom: 10px;
-  font-weight: bold;
-  color: #555;
-}
-
-input[type="text"],
-input[type="date"],
-select,
-textarea {
+.graphics{
   width: 100%;
-  padding: 10px;
+  height: 30%;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+
+  margin: 10px 0 0 20px;
+
+
+  min-height: 100px;
+  min-width: 100px;
+
+}
+
+
+.left{
+
+  width:67%
+}
+
+.buttonToAdd{
+  width: 100%;
+  display: flex;
+  justify-content:right;
   margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-
 }
-
-.formt {
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  padding: 5px;
-  margin: 10px 0;
-}
-
-}
-.fbtn:hover{
-  color: rgb(0, 0, 0);
-  cursor: pointer;
-}
-
-.formdt{
-  font-weight: 600;
-        font-size: larger;
-        margin-right: 10px;
-        display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.addvenue{
-  display: inline-block;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  text-decoration: none;
-  color: #000000;
-  background-color: #baeff8;
-  cursor: pointer;
-  font-weight: bold;
-}
-.button-select-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.container {
+.buttonToAddt{
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.row {
   display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  justify-content:space-around;
+  margin-bottom: 20px;
+}
+h1{
+  padding: 0 20px ;
+}
+.btn-table{
+ 
+   margin-right: 20px;
 }
 
-.col-md-8 {
-  position: relative;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+.tabTable td{
+  height: 30px;
 }
 
-nav[aria-label="breadcrumb"] {
-  padding: 1em;
-  background-color: #f8f9fa;
-  border-radius: 5px;
-}
-
-.breadcrumb-item {
-  display: inline-block;
-}
-
-.breadcrumb-item::after {
-  content: ">";
-  padding: 0 0.5em;
-}
-
-.breadcrumb-item:last-child::after {
-  content: "";
-}
-
-.breadcrumb-item a {
-  text-decoration: none;
-  color: #007bff;
-}
-
-.breadcrumb-item.active {
-  color: #6c757d;
-}
-
-.form-containerr {
-  display: none;
-}
-/*select css*/
-.custom {
-min-width: 350px;
-position: relative;
-}
-
-select {
-/*  safari  */
--webkit-appearance: none;
-appearance: none;
-/*  other styles for aesthetics */
-width: 100%;
-font-size: 1.15rem;
-padding: 0.675em 6em 0.675em 1em;
-background-color: #fff;
-border: 1px solid #caced1;
-border-radius: 0.25rem;
-color: #000;
-cursor: pointer;
-}
-
-.custom::before,
-.custom::after {
---size: 0.3rem;
-content: "";
-position: absolute;
-right: 1rem;
-pointer-events: none;
-}
-
-.custom::before {
-border-left: var(--size) solid transparent;
-border-right: var(--size) solid transparent;
-border-bottom: var(--size) solid black;
-top: 40%;
-}
-
-.custom::after {
-border-left: var(--size) solid transparent;
-border-right: var(--size) solid transparent;
-border-top: var(--size) solid black;
-top: 55%;
-}
-
-
-/*=============
-Aesthetics
-=========================*/
-
-/** {
-box-sizing: border-box;
-}
-
-body {
-min-height: 100vh;
-display: grid;
-place-items: center;
-}*/
-
-.error-message {
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
-  color: red; /* Set the error message text color to red */
-  font-weight: bold;
-}
-
-
-
-/* youmbi and carmela were here */
-/*-------------------------------------------------------------------------------------*/
-/*-----------------------------  CSS FOR THE NAVIGATION BAR ----------------------------*/
-
-.ultimate{
-  /* display: flex;
-  justify-content: space-between; */
+.side{
+ 
+width: 30%;
+height: 82.5vh;
+margin: 0 30px 0 0px;
 }
