--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -39,6 +39,7 @@ body {
     min-height: 100vh;
     background: var(--white);
     transition: 0.5s;
+    padding: 0 40px;
   }
   .main.active {
     width: calc(100% - 80px);
@@ -118,3 +119,16 @@ body {
     height: 100%;
     object-fit: cover;
   }
+
+
+.myprimarybtn{
+    background-color: var(--blue);
+    color: var(--white);
+    border: transparent;
+    padding: 10px 20px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+.myprimarybtn:hover{
+    cursor: pointer;
+}
